--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -10,6 +10,9 @@ AllCops:
   NewCops: disable
   Exclude:
     - db/schema.rb
+    - vendor/**/*
+    - 'bin/**/*'
+
 
 Naming/AccessorMethodName:
   Description: Check the naming of accessor methods for get_/set_.
